syntax = "proto3";
import "common/report.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "ReportsBranchMicroservice";

package ReportsBranchMicroservice;

service ReportsBranch {
  rpc AggregateUserActivity (AggregateUserActivityRequest) returns (AggregateUserActivityResponse);
  rpc AggregateOverall (AggregateOverallRequest) returns (AggregateOverallResponse);
}

message AggregateUserActivityRequest {
  string userId = 1;
  google.protobuf.Timestamp timestampFrom = 2;
  google.protobuf.Timestamp timestampTo = 3;
  Granularity granularity = 4;
}

message AggregateUserActivityResponse {
  string report = 1;
}

message AggregateOverallRequest {
  repeated Aggregation aggregations = 1;
  google.protobuf.Timestamp timestampFrom = 2;
  google.protobuf.Timestamp timestampTo = 3;
  Granularity granularity = 4;
  ReportSubject subject = 5;
}

message AggregateOverallResponse {
  string report = 1;
}